[workspace]
members = [
]

[package]
name = "c2rust_out"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "c2rust_out"
path = "c2rust-lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/afl_tmin.rs"
name = "afl_tmin"

[[bin]]
path = "src/afl_analyze.rs"
name = "afl_analyze"

[[bin]]
path = "src/afl_showmap.rs"
name = "afl_showmap"

[[bin]]
path = "src/afl_fuzz.rs"
name = "afl_fuzz"

[dependencies]
c2rust-bitfields = "0.3"
c2rust-asm-casts = "0.1"
libc = "0.2"



